# plextranslator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
plextranslator/: __init__.py  __main__.py  audio.py  capture.py  cli.py  config.py  dedupe.py  doctor.py  library.py  live.py  logging_conf.py  pipeline.py  plex_client.py  subtitles.py  transcriber.py  translator.py  web.py
scripts/: translate_new.sh  watch-korean.bat  watch-korean.ps1
tests/: test_audio.py  test_capture.py  test_config.py  test_dedupe.py  test_doctor.py  test_live.py  test_monitor.py  test_path_map.py  test_pipeline.py  test_plex_helpers.py  test_streams_of_type.py  test_subtitles.py  test_translator.py  test_web.py  test_whisper_cpp.py
